name:                count-down-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/count-down#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable count-down-server
  hs-source-dirs:      server
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , easy-file
                     , scotty
  ghc-options:         -Wall -Werror -O2
